@@ -1,3 +1,10 @@
+2017-06-28  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/81193
+	* lib/target-supports.exp
+	(check_ppc_cpu_supports_hw_available): New test to make sure
+	__builtin_cpu_supports works on power7 and newer.
+
 2017-06-28  Martin Liska  <mliska@suse.cz>
 
 	PR ipa/81128
