@@ -1,3 +1,9 @@
+2017-06-28  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR ipa/81238
+	* multiple_target.c (create_dispatcher_calls): Set the default
+	clone to be static, not public.
+
 2017-06-28  Richard Biener  <rguenther@suse.de>
 
 	* tree-vect-loop.c (vectorizable_reduction): Move special
